<resources>
    <string name="hello">Hello World, tafsirActivity!</string>
    <string name="app_name">Tafsir Quran Juz 30 </string>
<string name="tentang_aplikasi">"Tafsir Quran Juz 30 Merupakan Aplikasi yang berisi Quran juz 30 yang dilengkapi terjemahan bahasa Indonesia dan berbagai macam Tafsir diantaranya Tafsir Ibn Katsir, Ibn Abbas dan Jalalyn. Aplikasi ini untuk mempermudah umat muslim dalam mempelajari Quran beserta penjelasannya. Tafsir Quran Juz 30 ini Memiliki dua tools yaitu baca quran dan  baca tafsir dilain sisi aplikasi ini dapat memilih surat sesuai keinginan. Terimakasih telah menggunakan aplikasi ini. bila anda memiliki malasah atau masukan silahkan contak di faizalruzky@gmail.com"</string>
          <string name="title_activity_penjelasan"> Tafsir </string>
    <string name="action_about">Tentang</string>
    <string name="action_help">Bantuan</string>
    <string name="action_exit">Keluar</string>
    <string name="action_overflow">Lainnya</string>
       <string name="menu">Menu</string>
       <string name="menu_tab_bacaayat">Baca Ayat</string>
<string name="menu_tab_bacatafsir">Baca Tafsir</string>
<string name="menu_tab_pencarian">Pencarian</string>
<string name="add">add</string>
     <string name="surat_annas">Surat An-Nas</string>
    <string name="annas_ayat1"> قُلْ أَعُوذُ بِرَبِّ النَّاسِ﴿١﴾</string>
    <string name="annas_ayat2">مَلِكِ النَّاسِ﴿٢﴾</string>
    <string name="annas_ayat3">إِلَٰهِ النَّاسِ﴿٣﴾</string>
    <string name="annas_ayat4">مِنْ شَرِّ الْوَسْوَاسِ الْخَنَّاسِ﴿٤﴾</string>
    <string name="annas_ayat5">الَّذِي يُوَسْوِسُ فِي صُدُورِ النَّاسِ﴿٥﴾</string>
    <string name="annas_ayat6">مِنَ الْجِنَّةِ وَالنَّاسِ﴿٦﴾</string>
    <string name="annas_arti1">Katakanlah: "Aku berlindung kepada Tuhan (yang memelihara dan menguasai) manusia</string>
    <string name="annas_arti2">Raja manusia</string>
    <string name="annas_arti3">Sembahan manusia</string>
    <string name="annas_arti4">Dari kejahatan (bisikan) syaitan yang biasa bersembunyi,</string>
    <string name="annas_arti5">yang membisikkan (kejahatan) ke dalam dada manusia,</string>
    <string name="annas_arti6">dari (golongan) jin dan manusia</string>
     <string name="surat_alfalaq">Surat Al-Falaq</string>
      <string name="alfalaq_ayat1">قُلْ أَعُوذُ بِرَبِّ الْفَلَقِ﴿١﴾</string>
       <string name="alfalaq_ayat2">مِنْ شَرِّ مَا خَلَقَ﴿٢﴾</string>
        <string name="alfalaq_ayat3">وَمِنْ شَرِّ غَاسِقٍ إِذَا وَقَبَ﴿٣﴾</string>
         <string name="alfalaq_ayat4">وَمِنْ شَرِّ النَّفَّاثَاتِ فِي الْعُقَدِ﴿٤﴾</string>
          <string name="alfalaq_ayat5">وَمِنْ شَرِّ حَاسِدٍ إِذَا حَسَدَ﴿٥﴾</string>
    <string name="alfalaq_arti1">Katakanlah: "Aku berlindung kepada Tuhan Yang Menguasai subuh,</string>
    <string name="alfalaq_arti2">dari kejahatan makhluk-Nya,</string>
    <string name="alfalaq_arti3">dan dari kejahatan malam apabila telah gelap gulita,</string>
    <string name="alfalaq_arti4">dan dari kejahatan wanita-wanita tukang sihir yang menghembus pada buhul-buhul,</string>
    <string name="alfalaq_arti5">dan dari kejahatan pendengki bila ia dengki".</string>
        <string name="surat_alikhlas">Surat Al-Ikhlas</string>
      <string name="alikhlas_ayat1">قُلْ هُوَ اللَّهُ أَحَدٌ﴿١﴾</string>
       <string name="alikhlas_ayat2">لَمْ يَلِدْ وَلَمْ يُولَدْ﴿٣﴾</string>
        <string name="alikhlas_ayat3">وَمِنْ شَرِّ غَاسِقٍ إِذَا وَقَبَ﴿٣﴾</string>
         <string name="alikhlas_ayat4">وَلَمْ يَكُنْ لَهُ كُفُوًا أَحَدٌ﴿٤﴾</string>
       <string name="alikhlas_arti1">Katakanlah: "Dialah Allah, Yang Maha Esa.</string>
    <string name="alikhlas_arti2">Allah adalah Tuhan yang bergantung kepada-Nya segala sesuatu.</string>
      <string name="alikhlas_arti3">Dia tiada beranak dan tidak pula diperanakkan,</string>
      <string name="alikhlas_arti4">dan tidak ada seorangpun yang setara dengan Dia</string>
         <string name="surat_allahab">Surat Al Lahab</string>
          <string name="allahab_ayat1">تَبَّتْ يَدَا أَبِي لَهَبٍ وَتَبَّ﴿١﴾</string>
            <string name="allahab_ayat2">مَا أَغْنَىٰ عَنْهُ مَالُهُ وَمَا كَسَبَ﴿٢﴾</string>
             <string name="allahab_ayat3">سَيَصْلَىٰ نَارًا ذَاتَ لَهَبٍ﴿٣﴾</string>
              <string name="allahab_ayat4">وَامْرَأَتُهُ حَمَّالَةَ الْحَطَبِ﴿٤﴾</string>
              <string name="allahab_ayat5">فِي جِيدِهَا حَبْلٌ مِنْ مَسَدٍ﴿٥﴾</string>
                <string name="allahab_arti1">Binasalah kedua tangan Abu Lahab dan sesungguhnya dia akan binasa.</string>
                 <string name="allahab_arti2">Tidaklah berfaedah kepadanya harta bendanya dan apa yang ia usahakan.</string>
                   <string name="allahab_arti3">Kelak dia akan masuk ke dalam api yang bergejolak.</string>
                     <string name="allahab_arti4">Dan (begitu pula) istrinya, pembawa kayu bakar.</string>
               <string name="allahab_arti5">Yang di lehernya ada tali dari sabut.</string>
         <string name="surat_annasr">Surat An Nasr</string>
          <string name="annasr_ayat1"> إِذَا جَاءَ نَصْرُ اللَّهِ وَالْفَتْحُ﴿١﴾</string>
            <string name="annasr_ayat2">وَرَأَيْتَ النَّاسَ يَدْخُلُونَ فِي دِينِ اللَّهِ أَفْوَاجًا﴿٢﴾</string>
             <string name="annasr_ayat3">فَسَبِّحْ بِحَمْدِ رَبِّكَ وَاسْتَغْفِرْهُ ۚ إِنَّهُ كَانَ تَوَّابًا﴿٣﴾</string>
                <string name="annasr_arti1">Apabila telah datang pertolongan Allah dan kemenangan,</string>
                 <string name="annasr_arti2">dan kamu lihat manusia masuk agama Allah dengan berbondong-bondong,</string>
                   <string name="annasr_arti3">maka bertasbihlah dengan memuji Tuhanmu dan mohonlah ampun kepada-Nya. Sesungguhnya Dia adalah Maha Penerima taubat.</string>
     <string name="surat_alkafirun">Surat Al Kafirun</string>
    <string name="alkafirun_ayat1"> قُلْ يَا أَيُّهَا الْكَافِرُونَ﴿١﴾</string>
    <string name="alkafirun_ayat2">لَا أَعْبُدُ مَا تَعْبُدُونَ﴿٢﴾</string>
    <string name="alkafirun_ayat3">وَلَا أَنْتُمْ عَابِدُونَ مَا أَعْبُدُ﴿٣﴾</string>
    <string name="alkafirun_ayat4">وَلَا أَنَاْ عَابِدٌ مَا عَبَدْتُمْ﴿٤﴾</string>
    <string name="alkafirun_ayat5">وَلَا أَنْتُمْ عَابِدُونَ مَا أَعْبُدُ﴿٥﴾</string>
    <string name="alkafirun_ayat6">لَكُمْ دِينُكُمْ وَلِيَ دِينِ﴿٦﴾</string>
    <string name="alkafirun_arti1">Katakanlah: "Hai orang-orang kafir,</string>
    <string name="alkafirun_arti2">Aku tidak akan menyembah apa yang kamu sembah.</string>
    <string name="alkafirun_arti3">Dan kamu bukan penyembah Tuhan yang aku sembah.</string>
    <string name="alkafirun_arti4">Dan aku tidak pernah menjadi penyembah apa yang kamu sembah,</string>
    <string name="alkafirun_arti5">dan kamu tidak pernah (pula) menjadi penyembah Tuhan yang aku sembah.</string>
    <string name="alkafirun_arti6">Untukmu agamamu, dan untukkulah, agamaku".</string>
         <string name="surat_alkautsar">Surat Al Kautsar</string>
          <string name="alkautsar_ayat1"> إِنَّا أَعْطَيْنَاكَ الْكَوْثَرَ﴿١﴾</string>
            <string name="alkautsar_ayat2">فَصَلِّ لِرَبِّكَ وَانْحَرْ﴿٢﴾</string>
             <string name="alkautsar_ayat3">إِنَّ شَانِئَكَ هُوَ الْأَبْتَرُ﴿٣﴾</string>
                <string name="alkautsar_arti1">Sesungguhnya Kami telah memberikan kepadamu nikmat yang banyak.</string>
                 <string name="alkautsar_arti2">Maka dirikanlah shalat karena Tuhanmu; dan berkorbanlah.</string>
                   <string name="alkautsar_arti3">Sesungguhnya orang-orang yang membenci kamu dialah yang terputus.</string>
     <string name="surat_almaun">Surat Al Maun</string>
    <string name="almaun_ayat1"> أَرَأَيْتَ الَّذِي يُكَذِّبُ بِالدِّينِ﴿١﴾</string>
    <string name="almaun_ayat2">فَذَٰلِكَ الَّذِي يَدُعُّ الْيَتِيمَ﴿٢﴾</string>
    <string name="almaun_ayat3">وَلَا يَحُضُّ عَلَىٰ طَعَامِ الْمِسْكِينِ﴿٣﴾</string>
    <string name="almaun_ayat4">فَوَيْلٌ لِلْمُصَلِّينَ﴿٤﴾</string>
    <string name="almaun_ayat5">الَّذِينَ هُمْ عَنْ صَلَاتِهِمْ سَاهُونَ﴿٥﴾</string>
    <string name="almaun_ayat6">لَّذِينَ هُمْ يُرَاءُونَ﴿٦﴾</string>
    <string name="almaun_ayat7">وَيَمْنَعُونَ الْمَاعُونَ﴿٧﴾</string>
    <string name="almaun_arti1">Tahukah kamu (orang) yang mendustakan agama?</string>
    <string name="almaun_arti2">Itulah orang yang menghardik anak yatim,</string>
    <string name="almaun_arti3">dan tidak menganjurkan memberi makan orang miskin.</string>
    <string name="almaun_arti4">Maka kecelakaanlah bagi orang-orang yang shalat,</string>
    <string name="almaun_arti5">(yaitu) orang-orang yang lalai dari shalatnya,</string>
    <string name="almaun_arti6">orang-orang yang berbuat riya,</string>
    <string name="almaun_arti7">dan enggan (menolong dengan) barang berguna.</string>
        <string name="surat_alquraisy">Surat Al Quraisy</string>
      <string name="alquraisy_ayat1"> لِإِيلَافِ قُرَيْشٍ﴿١﴾</string>
       <string name="alquraisy_ayat2">إِيلَافِهِمْ رِحْلَةَ الشِّتَاءِ وَالصَّيْفِ﴿٢﴾</string>
        <string name="alquraisy_ayat3">فَلْيَعْبُدُوا رَبَّ هَٰذَا الْبَيْتِ﴿٣﴾</string>
         <string name="alquraisy_ayat4">الَّذِي أَطْعَمَهُمْ مِنْ جُوعٍ وَآمَنَهُمْ مِنْ خَوْفٍ﴿٤﴾</string>
       <string name="alquraisy_arti1">Karena kebiasaan orang-orang Quraisy,</string>
          <string name="alashr_ayat1">وَالْعَصْرِ﴿١﴾</string>
            <string name="alashr_ayat2">إِنَّ الْإِنْسَانَ لَفِي خُسْرٍ﴿٢﴾</string>
             <string name="alashr_ayat3">إِلَّا الَّذِينَ آمَنُوا وَعَمِلُوا الصَّالِحَاتِ وَتَوَاصَوْا بِالْحَقِّ وَتَوَاصَوْا بِالصَّبْرِ﴿٣﴾</string>
                <string name="alashr_arti1">Demi masa.</string>
                 <string name="alashr_arti2">Sesungguhnya manusia itu benar-benar dalam kerugian,</string>
                   <string name="alashr_arti3">kecuali orang-orang yang beriman dan mengerjakan amal saleh dan nasehat menasehati supaya mentaati kebenaran dan nasehat menasehati supaya menetapi kesabaran.</string>
    <string name="alaadiyat_ayat1"> وَالْعَادِيَاتِ ضَبْحًا﴿١﴾</string>
    <string name="alaadiyat_ayat2">فَالْمُورِيَاتِ قَدْحًا﴿٢﴾</string>
    <string name="alaadiyat_ayat3">فَالْمُغِيرَاتِ صُبْحًا﴿٣﴾</string>
    <string name="alaadiyat_ayat4">فَأَثَرْنَ بِهِ نَقْعًا﴿٤﴾</string>
    <string name="alaadiyat_ayat5">فَوَسَطْنَ بِهِ جَمْعًا﴿٥﴾</string>
    <string name="alaadiyat_ayat6">إِنَّ الْإِنْسَانَ لِرَبِّهِ لَكَنُودٌ﴿٦﴾</string>
    <string name="alaadiyat_ayat7">وَإِنَّهُ عَلَىٰ ذَٰلِكَ لَشَهِيدٌ﴿٧﴾</string>
    <string name="alaadiyat_ayat8">وَإِنَّهُ لِحُبِّ الْخَيْرِ لَشَدِيدٌ﴿٨﴾</string>
    <string name="alaadiyat_ayat9">أَفَلَا يَعْلَمُ إِذَا بُعْثِرَ مَا فِي الْقُبُورِ﴿٩﴾</string>
    <string name="alaadiyat_ayat10">وَحُصِّلَ مَا فِي الصُّدُورِ﴿١٠﴾</string>
    <string name="alaadiyat_ayat11">إِنَّ رَبَّهُمْ بِهِمْ يَوْمَئِذٍ لَخَبِيرٌ﴿١١﴾</string>
    <string name="alaadiyat_arti1">Demi kuda perang yang berlari kencang dengan terengah-engah,</string>
    <string name="alaadiyat_arti2">dan kuda yang mencetuskan api dengan pukulan (kuku kakinya),</string>
    <string name="alaadiyat_arti3">dan kuda yang menyerang dengan tiba-tiba di waktu pagi,</string>
    <string name="alaadiyat_arti4">maka ia menerbangkan debu,</string>
    <string name="alaadiyat_arti5">dan menyerbu ke tengah-tengah kumpulan musuh,</string>
    <string name="alaadiyat_arti6">sesungguhnya manusia itu sangat ingkar, tidak berterima kasih kepada Tuhannya,</string>
    <string name="alaadiyat_arti7">dan sesungguhnya manusia itu menyaksikan (sendiri) keingkarannya,</string>
    <string name="alaadiyat_arti8">dan sesungguhnya dia sangat bakhil karena cintanya kepada harta.</string>
     <string name="alaadiyat_arti9">Maka apakah dia tidak mengetahui apabila dibangkitkan apa yang ada di dalam kubur,</string>
      <string name="alaadiyat_arti10">dan dilahirkan apa yang ada di dalam dada,</string>
       <string name="alaadiyat_arti11">sesungguhnya Tuhan mereka pada hari itu Maha Mengetahui keadaan mereka.</string>
</resources>