<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmenu1"
    android:orientation="vertical" >
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRowbismillah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/logobismillah" />

                </TableRow>
                 <TableRow
                    android:id="@+id/tableRowannas1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textViewalashrayat1"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="right"
                            android:layout_weight="1"
                            android:text="@string/alashr_ayat1"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewannasarti1"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/alashr_arti1"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textViewannasayat2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:text="@string/alashr_ayat2"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewannasarti2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alashr_arti2"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textViewannasayat3"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="right"
                            android:layout_weight="1"
                            android:text="@string/alashr_ayat3"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewannasarti3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alashr_arti3"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>
                
</RelativeLayout>